--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1,5 +1,3 @@
-@import url("https://raw.githubusercontent.com/EnlighterJS/EnlighterJS/master/dist/enlighterjs.min.css");
-
-body {
-  background-color: red !important;
+.highlight pre {
+  white-space: pre-wrap;
 }
