Add Google Adsense script

--- a/_includes/google-analytics.html
+++ b/_includes/google-analytics.html
@@ -8,3 +8,6 @@
 
     gtag('config', '{{ site.google_analytics }}');
 </script>
+<!-- Adsense script -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7870730432418435"
+     crossorigin="anonymous"></script>
